# after updating this file, please run the following command
# so that deps are updated correctly:
#
# cargo generate-lockfile && CARGO_BAZEL_REPIN=1 bazelisk sync --only=cargo
[package]
name = "monorepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.5.34", features = ["derive"] }
swc_common = "=8.0.1"
sha2 = "=0.10.8"
hex = "=0.4.3"
serde_json = "=1.0.140"
swc_atoms = "=5.0.0"
rxp = "=0.2.0"
swc_ecma_parser = "=11.0.0"
swc_ecma_ast = "=8.1.0"
swc_allocator = "=4.0.0"
serenity = "=0.12.4"
tokio = { version = "=1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
