# after updating this file, please run the following command
# so that deps are updated correctly:
#
# cargo generate-lockfile && CARGO_BAZEL_REPIN=1 bazelisk sync --only=cargo
[package]
name = "monorepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.5.41", features = ["derive"] }
swc_common = "=13.0.4"
sha2 = "=0.10.9"
hex = "=0.4.3"
serde_json = "=1.0.140"
swc_atoms = "=6.0.1"
rxp = "=0.2.0"
swc_ecma_parser = "=19.0.1"
swc_ecma_ast = "=13.0.1"
swc_allocator = "=4.0.1"
serenity = "=0.12.4"
tokio = { version = "=1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
